--- a/bluetooth.cabal
+++ b/bluetooth.cabal
@@ -22,7 +22,8 @@ library
       Network.Bluetooth.Device
   other-modules:       
       Network.Bluetooth.Types
-  build-depends:       base >=4.6 && <5,
-                       bytestring >= 0.10.4.0
+  build-depends:       base >=4.5 && <5,
+                       network,
+                       bytestring
   default-language:    Haskell2010
   extra-libraries:     bluetooth
