--- a/simple-bluetooth.cabal
+++ b/simple-bluetooth.cabal
@@ -3,8 +3,9 @@
 
 name:                simple-bluetooth
 version:             0.1.0.0
-synopsis:            A small part of an interface to a bluetooth system, currently for bluez.
--- description:         
+synopsis:            Simple Bluetooth API for Windows and Linux (bluez)
+description:         You must use 'Network.withSocketsDo' at the start of your program
+                     for Windows compatibility.
 license:             BSD3
 license-file:        LICENSE
 author:              Stephen Blackheath
@@ -12,7 +13,8 @@ maintainer:          docks.cattlemen.stephen@blacksapphire.com
 -- copyright:           
 category:            Network
 build-type:          Simple
--- extra-source-files:  
+extra-source-files:  examples/discover.hs
+                     Network/Bluetooth/Adapter_win.h
 cabal-version:       >=1.10
 
 library
@@ -25,5 +27,12 @@ library
   build-depends:       base >=4.5 && <5,
                        network,
                        bytestring
+  if os(windows)
+    build-depends: Win32
   default-language:    Haskell2010
-  extra-libraries:     bluetooth
+  if os(windows)
+    extra-libraries:   ws2_32
+    include-dirs: Network/Bluetooth/
+  else
+    extra-libraries:   bluetooth
+
