--- a/simple-bluetooth.cabal
+++ b/simple-bluetooth.cabal
@@ -14,7 +14,6 @@ maintainer:          docks.cattlemen.stephen@blacksapphire.com
 category:            Network
 build-type:          Simple
 extra-source-files:  examples/discover.hs
-                     Network/Bluetooth/Adapter_win.h
 cabal-version:       >=1.10
 
 library
@@ -24,6 +23,9 @@ library
       Network.Bluetooth.Device
   other-modules:       
       Network.Bluetooth.Types
+  if os(windows)
+    other-modules:
+      Network.Bluetooth.Win32
   build-depends:       base >=4.5 && <5,
                        network,
                        bytestring
